refactor : Calculator 클래스의 validateIfInputNegative 메서드를 DelimiterParser 클래스 내부로 숨김